--- a/src/components/layout/projects/ProjectCard.css
+++ b/src/components/layout/projects/ProjectCard.css
@@ -1,3 +1,7 @@
+* {
+    font-family: Poppins;
+}
+
 .button {
     width: 82%;
     margin-bottom: 10px;
@@ -10,6 +14,10 @@
 
 .card:hover {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.card-text {
+    font-weight: 200;
 }
 
 .emoji {
